# .emacs.d

./: .gitattributes  .gitignore  .projectile  README.md  chaffin.org  dotemacs.el  dotemacs.org  early-init.el  halidom.el  halidom.org  init.el  requirements.txt
custom/: custom-linux.el  custom-macos.el  custom.el
docs/: chaffin.html  chaffin.md  chaffin.tex
etc/abbrev/: defs.el
etc/archive/: chaffin.org_archive
etc/auto-insert/: default-cls.cls  default-elisp.el  default-ling185a.org
etc/codelibrary/: bibtex.org  elisp.org  org.org
etc/custom/: custom-backup.el  custom-linux.el  custom-macos.el
etc/desktop/: .emacs.desktop
etc/display/: font-display.el
etc/lob/: library-of-babel.org
etc/patch/: hexl.patch  ox-beamer.patch  pdf-tools.patch
etc/preview/: orgling-preview.tex  uclacs-preview.tex  uclaling-preview.tex  uclasem-preview.tex  xelatex-preview.tex
etc/secrets/: secrets-encrypt.el.gpg  secrets.el  secrets.el.gpg
etc/skeletor/project-skeletons/cmake-unix-makefiles/: .gitignore  CMakeLists.txt  README.org  __PROJECT-VARS__.el
etc/skeletor/project-skeletons/cmake-unix-makefiles/src/: main.cpp
etc/themes/: one-dark-beautify-theme.el
etc/window-purpose/: default-layout.el
patch/: 0001-Support-xwidget-webkit-for-macOS-X.patch  add-support-for-imagemagick-7.patch  ox-beamer.patch
secrets/: secrets.el.gpg
site-lisp/: README.md
snippets/emacs-lisp-mode/: use-package
snippets/latex-mode/: algorithm  environment  ifthenelse
snippets/org-mode/: attr-html  attr-latex  definition  example  inline-math  latex-export  latex-header  (+7 more)
(+88 files in other folders)
